Changed to Collector.toList()